import * as express from 'express';
import * as Joi from 'joi';

import { getSwagger, router } from '../src';
import { productSchema } from './mocks/product';
import { userSchema } from './mocks/user';
import { errorSchema } from './mocks/error';

describe('Swagger generation', () => {
  describe('getSwagger', () => {
    it('Should return autogenerated default Swagger definition', () => {
      const swagger = getSwagger({
        version: '1.0.0',
        title: 'Test API',
        description: 'Test API description',
        servers: [{ url: 'https://myapi.org' }],
      });

      expect(swagger).toMatchSnapshot();
    });
  });

  describe('addRoute', () => {
    const app = express();

    it('Should succesfully generate swagger route', () => {
      router.use(app, '/products/:id').post('/', {
        description: 'Updates a product',
        tags: ['Products'],
        input: {
          body: productSchema,
          params: {
            id: Joi.string(),
          },
          query: {
            name: Joi.string()
              .description('Name to pass along')
              .required(),
            email: Joi.string(),
            publicId: Joi.number()
              .min(2.0)
              .required(),
          },
        },
        output: {
          200: productSchema, // Direct schema - not wrapped as object
          400: {
            error: errorSchema, // Single error
            user: userSchema,
          },
          401: {
            data: productSchema,
            errors: Joi.array() // TODO: Wrapped Joi.array should reuse the definition of the items
              .items(errorSchema)
              .meta({ definition: 'errors' }), // Array of errors
          },
        },
      });

      const swagger = getSwagger({
        version: '1.0.0',
        title: 'Test API',
        description: 'Test API description',
        servers: [{ url: 'https://myapi.org' }],
      });
      expect(swagger).toMatchSnapshot();
    });
  });
});
